--- a/ServicesSDK/config.js.dist
+++ b/ServicesSDK/config.js.dist
@@ -8,6 +8,8 @@ const inputs = {
   productId: 1587,
   venueId: 138,
   quantity: 2,
+  fromDate: '20201102',
+  toDate: '20201109',
 };
 
 const bookingData = {
