DPW-7362 add paymentType, update sdk version

--- a/ServicesSDK/config.js.dist
+++ b/ServicesSDK/config.js.dist
@@ -15,6 +15,7 @@ const inputs = {
 const bookingData = {
   redirectUrl: 'https://example.com',
   deliveryMethod: 'C',
+  paymentType: 'account',
   agentDetails: {
     agentId: '',
     agentPassword: '',
