--- a/Widgets/config.js.dist
+++ b/Widgets/config.js.dist
@@ -30,6 +30,7 @@ const inputs = {
 const bookingData = {
   redirectUrl: 'https://example.com',
   deliveryMethod: 'C',
+  paymentType: 'account',
   agentDetails: {
     agentId: '',
     agentPassword: '',
